# cli-test

./: pyproject.toml
cli_test/: cli_main.py
