[tool.poetry]
name = "cli-test"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <sociallucasalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.group.selenium.dependencies]
selenium = {version = "^4.26.1", extras = ["selenium"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
